RESOLVED FIXED40247
[Qt] DumpRenderTreeSupportQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40247
Summary [Qt] DumpRenderTreeSupportQt.cpp has coding-style errors
Anders Bakken
Reported 2010-06-07 11:45:20 PDT
[Qt] DumpRenderTreeSupportQt.cpp has coding-style errors
Attachments
Patch (1.46 KB, patch)
2010-06-07 11:45 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-06-07 11:45:47 PDT
WebKit Commit Bot
Comment 2 2010-06-09 15:07:15 PDT
Comment on attachment 58059 [details] Patch Clearing flags on attachment: 58059 Committed r60917: <http://trac.webkit.org/changeset/60917>
WebKit Commit Bot
Comment 3 2010-06-09 15:07:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.