2010-06-09  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        [Qt] DumpRenderTreeSupportQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40247

        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (DumpRenderTreeSupportQt::firstRectForCharacterRange):

Canonical link: https://commits.webkit.org/51932@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60917 268f45cc-cd09-0410-ab3c-d52691b4dbfc